--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,21 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
 <body class="mat-typography">
-  <app-root></app-root>
   
 
+<nav class="navigation">
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo">Injectable</a><!--  la variable {{title}} se trouve dans le fichier app.component.ts -->
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="#">Home</a></li>
+        <li><a href="/hero">Images Heroes</a></li> 
+      </ul>
+    </div>
+</nav>
 </body>
 </html>
+<app-root></app-root>
